@@ -1,5 +1,10 @@
 1998-01-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
+	* MessageProbeWidget.m:  Include simtools.h instead of ProbeDisplay.h.
+	([MessageProbeWidget -Spawn]): Use createProbeDisplay instead of
+	calling createProbeDisplayFor method.
+	* VarProbeWidget.m: Likewise.
+
 	* simtools.m: Declare probeDisplay as an object complying to the
 	ProbeDisplayManager protocol instead of being statically typed.
 	Import simtools.h.
